force-app/main/default/objects/ssot__RetailStoreProduct__dlm/fields/ssot__DefaultProductQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultProductQuantity__c</fullName>
    <label>Default Product Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DefaultProductQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>