force-app/main/default/objects/ssot__RetailStoreProduct__dlm/fields/ssot__InStoreLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InStoreLocationId__c</fullName>
    <label>In Store Location</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InStoreLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>